--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="home-content">
             <h1>Hi, I'm Adenike</h1>
             <h3>Your certified real estate consultant</h3>
-            <p>Connect with me for your quality, luxurios properties around the globe.</p>
+            <p>Connect with me for your genuine, affordable and profitable properties around the globe.</p>
        
                 <div class="home-sci">
-                    <a href="https://web.facebook.com/people/Adenike-Adebiyi/pfbid0QrxwHgL2VrpiDWMYmqxzBo4uAkMKewdzrRWn5zTmUiQL8AApYupqAVb7pqqqwrurl/?mibextid=ZbWKwL"><i class='bx bxl-facebook'></i>
+                    <a href="https://m.facebook.com/people/Firstklassproperties/100076007145841/"><i class='bx bxl-facebook'></i>
                     </a>
                     <a href="#"><i class='bx bxl-gmail'></i>
                     </a>
